# TeachTech_be

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml
app/: apps.py  task.py
app/admin/: admins.py
app/admin/models/: categories.py  course.py  payment.py  teachers.py
app/apis/: attendance.py  auths.py  categories.py  courses.py  face.py  meetings.py  notification.py  payment.py  teachers.py  uploads.py  zalopay_callback.py  zalopay_create.py  zalopay_status.py
app/migrations/: 0001_initial.py  0002_alter_teacher_id.py  0003_payment.py  0004_user_payment.py  0005_user_is_teacher_user_teacher.py  0006_document_meeting_attendance.py  0007_rename_date_meeting_date_time_and_more.py  0008_remove_document_file_path_and_more.py  0009_remove_document_file_document_file_url.py  0010_alter_meeting_participants.py  0011_attendance_has_attended.py  0012_alter_attendance_has_attended.py  0013_remove_attendance_has_attended_meeting_has_attended.py
app/models/: __init__.py  attendance.py  categories.py  course.py  document.py  meeting.py  payment.py  teachers.py  user.py
app/serializers/: attendance.py  categories.py  courses.py  document.py  face.py  meeting.py  payments.py  teachers.py  test.py  zalopay.py
app/urls/: attendance.py  auths.py  category.py  course.py  face.py  meeting.py  notification.py  payment.py  teacher.py  uploads.py  zalopay.py
app/utils/: __init__.py  convert_util.py  validate_util.py
be_teachtech/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
images/documents/: all_phone_numbers_VSn6Qbk.xlsx
(+1 files in other folders)
